# pythonLimpador

./: .gitignore  README.md  Version.txt  app.py  gui.py  pyproject.toml  updater.py
Desktop/PythonLimpador/: app.py  gui.py
Desktop/PythonLimpador/installer_config/: script.iss
installer_config/: script.iss
