[project]
name = "limpador"
version = "0.0.6"
description = ""
authors = [
    {name = "Luiz Felipe Mantoani Fantini",email = "felipefantini1@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "limpador", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
